# stm32f303xe

./: Cargo.toml  STM32F303xE.svd.patch
